--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@angular/router": "^20.1.0",
     "@angular/ssr": "^20.1.1",
     "@tailwindcss/postcss": "^4.1.11",
+    "axios": "^1.10.0",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "lucide-angular": "^0.525.0",
     "postcss": "^8.5.6",
