--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "lucide-angular": "^0.525.0",
+    "pocketbase": "^0.26.1",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.11",
